--- a/demo_project/demo_app/html/toc-demo_project.demo_app.AdminProyectos.views-module.html
+++ b/demo_project/demo_app/html/toc-demo_project.demo_app.AdminProyectos.views-module.html
@@ -13,9 +13,12 @@
 <h1 class="toc">Module views</h1>
 <hr />
   <h2 class="toc">Functions</h2>
-    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#editar_proyecto"
+    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#colaboradores"
+     >colaboradores</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#editar_proyecto"
      >editar_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#eliminar_proyecto"
-     >eliminar_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#nuevo_proyecto"
+     >eliminar_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#mi_proyecto"
+     >mi_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#mis_proyectos"
+     >mis_proyectos</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#nuevo_proyecto"
      >nuevo_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#proyectos"
      >proyectos</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
