--- a/demo_project/demo_app/html/toc-demo_project.demo_app.AdminRoles.views-module.html
+++ b/demo_project/demo_app/html/toc-demo_project.demo_app.AdminRoles.views-module.html
@@ -13,14 +13,22 @@
 <h1 class="toc">Module views</h1>
 <hr />
   <h2 class="toc">Functions</h2>
-    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#editar_rol"
-     >editar_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#eliminar_rol"
-     >eliminar_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol"
-     >nuevo_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol_permiso"
-     >nuevo_rol_permiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol_user"
-     >nuevo_rol_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#roles"
-     >roles</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#ver_rol"
-     >ver_rol</a><br /><hr />
+    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#desasignar_rol"
+     >desasignar_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_leader"
+     >nuevo_leader</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol"
+     >nuevo_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol_user"
+     >nuevo_rol_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#sinpermiso"
+     >sinpermiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#ver_rol"
+     >ver_rol</a><br />  <h2 class="toc">Variables</h2>
+    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#asignar"
+     >asignar</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#aux"
+     >aux</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#id_rol"
+     >id_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#id_user"
+     >id_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#msg"
+     >msg</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#rol_user"
+     >rol_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#roles"
+     >roles</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#users"
+     >users</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
