--- a/demo_project/demo_app/html/toc-demo_project.demo_app.models-module.html
+++ b/demo_project/demo_app/html/toc-demo_project.demo_app.models-module.html
@@ -13,11 +13,13 @@
 <h1 class="toc">Module models</h1>
 <hr />
   <h2 class="toc">Classes</h2>
-    <a target="mainFrame" href="demo_project.demo_app.models.Proyecto-class.html"
+    <a target="mainFrame" href="demo_project.demo_app.models.Fase-class.html"
+     >Fase</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Permisos-class.html"
+     >Permisos</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Proyecto-class.html"
      >Proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Rol-class.html"
-     >Rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolPermiso-class.html"
-     >RolPermiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolUser-class.html"
-     >RolUser</a><br /><hr />
+     >Rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolUser-class.html"
+     >RolUser</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.TipoItem-class.html"
+     >TipoItem</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
