--- a/demo_project/demo_app/html/toc-everything.html
+++ b/demo_project/demo_app/html/toc-everything.html
@@ -13,54 +13,57 @@
 <h1 class="toc">Everything</h1>
 <hr />
   <h2 class="toc">All Classes</h2>
-    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.forms.PermisoForm-class.html"
-     >demo_project.demo_app.AdminPermisos.forms.PermisoForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.forms.PermisoForm.Meta-class.html"
-     >demo_project.demo_app.AdminPermisos.forms.PermisoForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.forms.TipoContenidoForm-class.html"
-     >demo_project.demo_app.AdminPermisos.forms.TipoContenidoForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.forms.TipoContenidoForm.Meta-class.html"
-     >demo_project.demo_app.AdminPermisos.forms.TipoContenidoForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.forms.ProyectoForm-class.html"
+    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.forms.ProyectoForm-class.html"
      >demo_project.demo_app.AdminProyectos.forms.ProyectoForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.forms.ProyectoForm.Meta-class.html"
-     >demo_project.demo_app.AdminProyectos.forms.ProyectoForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.forms.RolPermisoForm-class.html"
-     >demo_project.demo_app.AdminRoles.forms.RolPermisoForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.forms.RolPermisoForm.Meta-class.html"
-     >demo_project.demo_app.AdminRoles.forms.RolPermisoForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.forms.RolUserForm-class.html"
-     >demo_project.demo_app.AdminRoles.forms.RolUserForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.forms.RolUserForm.Meta-class.html"
-     >demo_project.demo_app.AdminRoles.forms.RolUserForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.forms.EditUserForm-class.html"
+     >demo_project.demo_app.AdminProyectos.forms.ProyectoForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.forms.TipoItemForm-class.html"
+     >demo_project.demo_app.AdminTipoItem.forms.TipoItemForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.forms.TipoItemForm.Meta-class.html"
+     >demo_project.demo_app.AdminTipoItem.forms.TipoItemForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.forms.EditUserForm-class.html"
      >demo_project.demo_app.AdminUsuarios.forms.EditUserForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.forms.EditUserForm.Meta-class.html"
      >demo_project.demo_app.AdminUsuarios.forms.EditUserForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.forms.RegistrationForm-class.html"
      >demo_project.demo_app.AdminUsuarios.forms.RegistrationForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.forms.RegistrationForm.Meta-class.html"
-     >demo_project.demo_app.AdminUsuarios.forms.RegistrationForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.FormSetInlineForm-class.html"
+     >demo_project.demo_app.AdminUsuarios.forms.RegistrationForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.constantes.EstadosFase-class.html"
+     >demo_project.demo_app.constantes.EstadosFase</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.FormSetInlineForm-class.html"
      >demo_project.demo_app.forms.FormSetInlineForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.TestForm-class.html"
      >demo_project.demo_app.forms.TestForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.TestInlineForm-class.html"
      >demo_project.demo_app.forms.TestInlineForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.TestModelForm-class.html"
      >demo_project.demo_app.forms.TestModelForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.TestModelForm.Meta-class.html"
      >demo_project.demo_app.forms.TestModelForm.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.forms.WidgetsForm-class.html"
-     >demo_project.demo_app.forms.WidgetsForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Proyecto-class.html"
+     >demo_project.demo_app.forms.WidgetsForm</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Fase-class.html"
+     >demo_project.demo_app.models.Fase</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Fase.Meta-class.html"
+     >demo_project.demo_app.models.Fase.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Permisos-class.html"
+     >demo_project.demo_app.models.Permisos</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Permisos.Meta-class.html"
+     >demo_project.demo_app.models.Permisos.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Proyecto-class.html"
      >demo_project.demo_app.models.Proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Proyecto.Meta-class.html"
      >demo_project.demo_app.models.Proyecto.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Rol-class.html"
      >demo_project.demo_app.models.Rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.Rol.Meta-class.html"
-     >demo_project.demo_app.models.Rol.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolPermiso-class.html"
-     >demo_project.demo_app.models.RolPermiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolPermiso.Meta-class.html"
-     >demo_project.demo_app.models.RolPermiso.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolUser-class.html"
+     >demo_project.demo_app.models.Rol.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolUser-class.html"
      >demo_project.demo_app.models.RolUser</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.RolUser.Meta-class.html"
-     >demo_project.demo_app.models.RolUser.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.tests.Testing-class.html"
+     >demo_project.demo_app.models.RolUser.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.TipoItem-class.html"
+     >demo_project.demo_app.models.TipoItem</a><br />    <a target="mainFrame" href="demo_project.demo_app.models.TipoItem.Meta-class.html"
+     >demo_project.demo_app.models.TipoItem.Meta</a><br />    <a target="mainFrame" href="demo_project.demo_app.tests.Testing-class.html"
      >demo_project.demo_app.tests.Testing</a><br />  <h2 class="toc">All Functions</h2>
-    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.views-module.html#contenidos"
-     >demo_project.demo_app.AdminPermisos.views.contenidos</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.views-module.html#editar_contenido"
-     >demo_project.demo_app.AdminPermisos.views.editar_contenido</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.views-module.html#editar_permiso"
-     >demo_project.demo_app.AdminPermisos.views.editar_permiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.views-module.html#nuevo_contenido"
-     >demo_project.demo_app.AdminPermisos.views.nuevo_contenido</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.views-module.html#nuevo_permiso"
-     >demo_project.demo_app.AdminPermisos.views.nuevo_permiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.views-module.html#permisos"
-     >demo_project.demo_app.AdminPermisos.views.permisos</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#editar_proyecto"
+    <a target="mainFrame" href="demo_project.demo_app.AdminFases.views-module.html#fase"
+     >demo_project.demo_app.AdminFases.views.fase</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminFases.views-module.html#fases_proyecto"
+     >demo_project.demo_app.AdminFases.views.fases_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminFases.views-module.html#importar"
+     >demo_project.demo_app.AdminFases.views.importar</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminFases.views-module.html#procesar_import"
+     >demo_project.demo_app.AdminFases.views.procesar_import</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#colaboradores"
+     >demo_project.demo_app.AdminProyectos.views.colaboradores</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#editar_proyecto"
      >demo_project.demo_app.AdminProyectos.views.editar_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#eliminar_proyecto"
-     >demo_project.demo_app.AdminProyectos.views.eliminar_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#nuevo_proyecto"
+     >demo_project.demo_app.AdminProyectos.views.eliminar_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#mi_proyecto"
+     >demo_project.demo_app.AdminProyectos.views.mi_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#mis_proyectos"
+     >demo_project.demo_app.AdminProyectos.views.mis_proyectos</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#nuevo_proyecto"
      >demo_project.demo_app.AdminProyectos.views.nuevo_proyecto</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.views-module.html#proyectos"
-     >demo_project.demo_app.AdminProyectos.views.proyectos</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#editar_rol"
-     >demo_project.demo_app.AdminRoles.views.editar_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#eliminar_rol"
-     >demo_project.demo_app.AdminRoles.views.eliminar_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol"
-     >demo_project.demo_app.AdminRoles.views.nuevo_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol_permiso"
-     >demo_project.demo_app.AdminRoles.views.nuevo_rol_permiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol_user"
-     >demo_project.demo_app.AdminRoles.views.nuevo_rol_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#roles"
-     >demo_project.demo_app.AdminRoles.views.roles</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#ver_rol"
-     >demo_project.demo_app.AdminRoles.views.ver_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.views-module.html#activar_usuario"
+     >demo_project.demo_app.AdminProyectos.views.proyectos</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#desasignar_rol"
+     >demo_project.demo_app.AdminRoles.views.desasignar_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_leader"
+     >demo_project.demo_app.AdminRoles.views.nuevo_leader</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol"
+     >demo_project.demo_app.AdminRoles.views.nuevo_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#nuevo_rol_user"
+     >demo_project.demo_app.AdminRoles.views.nuevo_rol_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#sinpermiso"
+     >demo_project.demo_app.AdminRoles.views.sinpermiso</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#ver_rol"
+     >demo_project.demo_app.AdminRoles.views.ver_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.views-module.html#editartipoitem"
+     >demo_project.demo_app.AdminTipoItem.views.editartipoitem</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.views-module.html#eliminartipoitem"
+     >demo_project.demo_app.AdminTipoItem.views.eliminartipoitem</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.views-module.html#nuevoTipoItem"
+     >demo_project.demo_app.AdminTipoItem.views.nuevoTipoItem</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.views-module.html#tipoitem"
+     >demo_project.demo_app.AdminTipoItem.views.tipoitem</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.views-module.html#activar_usuario"
      >demo_project.demo_app.AdminUsuarios.views.activar_usuario</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.views-module.html#cerrar"
      >demo_project.demo_app.AdminUsuarios.views.cerrar</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.views-module.html#desactivar_usuario"
      >demo_project.demo_app.AdminUsuarios.views.desactivar_usuario</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios.views-module.html#editar_usuario"
@@ -77,13 +80,25 @@
      >demo_project.demo_app.views.demo_pagination</a><br />    <a target="mainFrame" href="demo_project.demo_app.views-module.html#demo_tabs"
      >demo_project.demo_app.views.demo_tabs</a><br />    <a target="mainFrame" href="demo_project.demo_app.views-module.html#demo_widgets"
      >demo_project.demo_app.views.demo_widgets</a><br />  <h2 class="toc">All Variables</h2>
-    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos-module.html#__package__"
+    <a target="mainFrame" href="demo_project.demo_app.AdminFases-module.html#__package__"
+     >demo_project.demo_app.AdminFases.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminFases.forms-module.html#__package__"
+     >demo_project.demo_app.AdminFases.forms.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos-module.html#__package__"
      >demo_project.demo_app.AdminPermisos.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminPermisos.models-module.html#__package__"
      >demo_project.demo_app.AdminPermisos.models.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos-module.html#__package__"
      >demo_project.demo_app.AdminProyectos.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminProyectos.models-module.html#__package__"
      >demo_project.demo_app.AdminProyectos.models.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles-module.html#__package__"
      >demo_project.demo_app.AdminRoles.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.models-module.html#__package__"
-     >demo_project.demo_app.AdminRoles.models.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios-module.html#__package__"
+     >demo_project.demo_app.AdminRoles.models.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#asignar"
+     >demo_project.demo_app.AdminRoles.views.asignar</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#aux"
+     >demo_project.demo_app.AdminRoles.views.aux</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#id_rol"
+     >demo_project.demo_app.AdminRoles.views.id_rol</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#id_user"
+     >demo_project.demo_app.AdminRoles.views.id_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#msg"
+     >demo_project.demo_app.AdminRoles.views.msg</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#rol_user"
+     >demo_project.demo_app.AdminRoles.views.rol_user</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#roles"
+     >demo_project.demo_app.AdminRoles.views.roles</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminRoles.views-module.html#users"
+     >demo_project.demo_app.AdminRoles.views.users</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem-module.html#__package__"
+     >demo_project.demo_app.AdminTipoItem.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminTipoItem.models-module.html#__package__"
+     >demo_project.demo_app.AdminTipoItem.models.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.AdminUsuarios-module.html#__package__"
      >demo_project.demo_app.AdminUsuarios.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app-module.html#__package__"
      >demo_project.demo_app.__package__</a><br />    <a target="mainFrame" href="demo_project.demo_app.constantes-module.html#__package__"
      >demo_project.demo_app.constantes.__package__</a><br /><hr />
