--- a/demo_project/demo_app/html/index.html
+++ b/demo_project/demo_app/html/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN"
           "DTD/xhtml1-frameset.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
+<head>n
   <title> API Documentation </title>
 </head>
 <frameset cols="20%,80%">
