--- a/demo_project/demo_app/html/toc-demo_project.demo_app.constantes-module.html
+++ b/demo_project/demo_app/html/toc-demo_project.demo_app.constantes-module.html
@@ -12,7 +12,9 @@
       alink="#204080">
 <h1 class="toc">Module constantes</h1>
 <hr />
-  <h2 class="toc">Variables</h2>
+  <h2 class="toc">Classes</h2>
+    <a target="mainFrame" href="demo_project.demo_app.constantes.EstadosFase-class.html"
+     >EstadosFase</a><br />  <h2 class="toc">Variables</h2>
     <a target="mainFrame" href="demo_project.demo_app.constantes-module.html#__package__"
      >__package__</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
